--- a/Makefile.in
+++ b/Makefile.in
@@ -240,7 +240,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = README.md autogen.sh ChangeLog COPYING m4
+EXTRA_DIST = README.md autogen.sh ChangeLog COPYING m4 .gitignore 
 SUBDIRS = src nv_cuda src/tests vcproj
 all: all-recursive
 
