--- a/vcproj/nv.vcproj
+++ b/vcproj/nv.vcproj
@@ -648,6 +648,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\src\nv_ml_lmca.c"
+					>
+				</File>
+				<File
 					RelativePath="..\src\nv_ml_lr.c"
 					>
 				</File>
@@ -1007,6 +1011,10 @@
 				</File>
 				<File
 					RelativePath="..\src\nv_ml_lbgu.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\nv_ml_lmca.h"
 					>
 				</File>
 				<File
