--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -80,7 +80,8 @@ am_nv_test_OBJECTS = nv_test-nv_test.$(OBJEXT) \
 	nv_test-nv_test_io.$(OBJEXT) nv_test-nv_test_munkres.$(OBJEXT) \
 	nv_test-nv_test_sha1.$(OBJEXT) nv_test-nv_test_knn2.$(OBJEXT) \
 	nv_test-nv_test_knn_pca.$(OBJEXT) \
-	nv_test-nv_test_knn_lmca.$(OBJEXT)
+	nv_test-nv_test_knn_lmca.$(OBJEXT) \
+	nv_test-nv_test_eigen.$(OBJEXT)
 nv_test_OBJECTS = $(am_nv_test_OBJECTS)
 nv_test_DEPENDENCIES = $(builddir)/../libnv.la
 nv_test_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
@@ -265,7 +266,8 @@ nv_test_munkres.c \
 nv_test_sha1.c \
 nv_test_knn2.c \
 nv_test_knn_pca.c \
-nv_test_knn_lmca.c 
+nv_test_knn_lmca.c \
+nv_test_eigen.c
 
 nv_test_CFLAGS = -Wall \
 -I$(srcdir)/../ -I$(srcdir)/../3rd_party/sha1 -I$(srcdir)/../3rd_party/mt -I$(srcdir)/../3rd_party/avxintrin_emu \
@@ -336,6 +338,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test_arow.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test_eigen.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test_io.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test_keypoint.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nv_test-nv_test_klr.Po@am__quote@
@@ -700,6 +703,20 @@ nv_test-nv_test_knn_lmca.obj: nv_test_knn_lmca.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='nv_test_knn_lmca.c' object='nv_test-nv_test_knn_lmca.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(nv_test_CPPFLAGS) $(CPPFLAGS) $(nv_test_CFLAGS) $(CFLAGS) -c -o nv_test-nv_test_knn_lmca.obj `if test -f 'nv_test_knn_lmca.c'; then $(CYGPATH_W) 'nv_test_knn_lmca.c'; else $(CYGPATH_W) '$(srcdir)/nv_test_knn_lmca.c'; fi`
+
+nv_test-nv_test_eigen.o: nv_test_eigen.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(nv_test_CPPFLAGS) $(CPPFLAGS) $(nv_test_CFLAGS) $(CFLAGS) -MT nv_test-nv_test_eigen.o -MD -MP -MF $(DEPDIR)/nv_test-nv_test_eigen.Tpo -c -o nv_test-nv_test_eigen.o `test -f 'nv_test_eigen.c' || echo '$(srcdir)/'`nv_test_eigen.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/nv_test-nv_test_eigen.Tpo $(DEPDIR)/nv_test-nv_test_eigen.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='nv_test_eigen.c' object='nv_test-nv_test_eigen.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(nv_test_CPPFLAGS) $(CPPFLAGS) $(nv_test_CFLAGS) $(CFLAGS) -c -o nv_test-nv_test_eigen.o `test -f 'nv_test_eigen.c' || echo '$(srcdir)/'`nv_test_eigen.c
+
+nv_test-nv_test_eigen.obj: nv_test_eigen.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(nv_test_CPPFLAGS) $(CPPFLAGS) $(nv_test_CFLAGS) $(CFLAGS) -MT nv_test-nv_test_eigen.obj -MD -MP -MF $(DEPDIR)/nv_test-nv_test_eigen.Tpo -c -o nv_test-nv_test_eigen.obj `if test -f 'nv_test_eigen.c'; then $(CYGPATH_W) 'nv_test_eigen.c'; else $(CYGPATH_W) '$(srcdir)/nv_test_eigen.c'; fi`
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/nv_test-nv_test_eigen.Tpo $(DEPDIR)/nv_test-nv_test_eigen.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='nv_test_eigen.c' object='nv_test-nv_test_eigen.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(nv_test_CPPFLAGS) $(CPPFLAGS) $(nv_test_CFLAGS) $(CFLAGS) -c -o nv_test-nv_test_eigen.obj `if test -f 'nv_test_eigen.c'; then $(CYGPATH_W) 'nv_test_eigen.c'; else $(CYGPATH_W) '$(srcdir)/nv_test_eigen.c'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
