--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.log
+*~
 *.o
 *.lo
 *.so
@@ -6,19 +6,38 @@
 *.la
 .deps
 .libs
+*.pc
 autom4te.cache
 stamp-h1
+libtool
 Makefile
-*~
+Makefile.in
+autom4te.cache
+aclocal.m4
+compile
+configure
+depcomp
+install-sh
+missing
+ltmain.sh
 config.log
 config.status
+config.guess
+config.sub
+config.h
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
 GPATH
 GRTAGS
 GSYMS
 GTAGS
-libtool
-src/nv.pc
-src/nv_core/config.h
+
+*.log
+
 src/nv_core/nv_config_auto.h
 src/nv_dump_lr
 tmp/
@@ -28,4 +47,3 @@ src/nv_matrix_text2bin
 src/tests/nv_test
 src/tests/test.mat
 src/tests/test.matb
-src/config.h
