--- a/Makefile.in
+++ b/Makefile.in
@@ -141,6 +141,7 @@ AWK = @AWK@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CP = @CP@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
@@ -148,11 +149,14 @@ CXXCPP = @CXXCPP@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
+DEBUILD = @DEBUILD@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
+DPKG_FLAGS = @DPKG_FLAGS@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
+ECHO = @ECHO@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -176,6 +180,7 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
+MV = @MV@
 NM = @NM@
 NMEDIT = @NMEDIT@
 NV_MAJOR = @NV_MAJOR@
@@ -197,6 +202,8 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+TAR = @TAR@
+TEST = @TEST@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -264,6 +271,9 @@ top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = README.md autogen.sh ChangeLog COPYING m4 .gitignore 
 SUBDIRS = src nv_cuda src/tests vcproj
+@BUILDING_DEB_TRUE@DEBSOURCEPKG = $(PACKAGE)_$(VERSION).orig.tar.gz
+@BUILDING_DEB_TRUE@DEBSOURCEDIR = $(PACKAGE)-$(VERSION)
+CLEANFILES = *.deb *.debian.tar.gz *.dsc *.changes *.build $(DEBSOURCEPKG) 
 all: all-recursive
 
 .SUFFIXES:
@@ -660,6 +670,7 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
@@ -670,7 +681,7 @@ maintainer-clean-generic:
 	@echo "it deletes files that may require special tools to rebuild."
 clean: clean-recursive
 
-clean-am: clean-generic clean-libtool mostlyclean-am
+clean-am: clean-generic clean-libtool clean-local mostlyclean-am
 
 distclean: distclean-recursive
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
@@ -743,9 +754,9 @@ uninstall-am:
 
 .PHONY: $(RECURSIVE_CLEAN_TARGETS) $(RECURSIVE_TARGETS) CTAGS GTAGS \
 	all all-am am--refresh check check-am clean clean-generic \
-	clean-libtool ctags ctags-recursive dist dist-all dist-bzip2 \
-	dist-gzip dist-lzip dist-lzma dist-shar dist-tarZ dist-xz \
-	dist-zip distcheck distclean distclean-generic \
+	clean-libtool clean-local ctags ctags-recursive dist dist-all \
+	dist-bzip2 dist-gzip dist-lzip dist-lzma dist-shar dist-tarZ \
+	dist-xz dist-zip distcheck distclean distclean-generic \
 	distclean-libtool distclean-tags distcleancheck distdir \
 	distuninstallcheck dvi dvi-am html html-am info info-am \
 	install install-am install-data install-data-am install-dvi \
@@ -760,6 +771,27 @@ uninstall-am:
 
 valgrind:
 	cd src/tests; LD_LIBRARY_PATH=../.libs valgrind -v --tool=memcheck --leak-check=full --show-reachable=yes --run-libc-freeres=no --track-origins=yes --log-file=./valgrind.log ./.libs/nv_test ; cat valgrind.log; cd -
+@BUILDING_DEB_TRUE@deb: dist
+@BUILDING_DEB_TRUE@	@$(ECHO) "Building Debian package..."; \
+@BUILDING_DEB_TRUE@	if $(TEST) ! -d debian; then \
+@BUILDING_DEB_TRUE@		$(ECHO) "The files needed for building a Debian package are not" \
+@BUILDING_DEB_TRUE@		"included by default in the distribution. To build a package, check" \
+@BUILDING_DEB_TRUE@		"out the project from source control."; \
+@BUILDING_DEB_TRUE@		exit 1; \
+@BUILDING_DEB_TRUE@	fi; \
+@BUILDING_DEB_TRUE@	$(MV) $(PACKAGE)-$(VERSION).tar.gz $(DEBSOURCEPKG) && \
+@BUILDING_DEB_TRUE@	$(TAR) --extract --gunzip --file $(DEBSOURCEPKG) && \
+@BUILDING_DEB_TRUE@	$(MKDIR_P) $(DEBSOURCEDIR)/debian && \
+@BUILDING_DEB_TRUE@	$(CP) -r debian/ $(DEBSOURCEDIR) && \
+@BUILDING_DEB_TRUE@	cd $(DEBSOURCEDIR) && \
+@BUILDING_DEB_TRUE@	$(DEBUILD) $(DPKG_FLAGS); \
+@BUILDING_DEB_TRUE@	cd ..;
+@BUILDING_DEB_FALSE@deb:
+@BUILDING_DEB_FALSE@	@$(ECHO) \
+@BUILDING_DEB_FALSE@	"To build a Debian package, you must run configure with --enable-deb."; \
+@BUILDING_DEB_FALSE@	exit 1
+clean-local:
+	-rm -rf $(DEBSOURCEDIR)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
