--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *~
+*.trs
 *.o
 *.lo
 *.so
@@ -19,6 +20,7 @@ configure
 depcomp
 install-sh
 missing
+test-driver
 ltmain.sh
 config.log
 config.status
