AVX/SSE3向けの最適化; nv_vector_normalize_L2のバグ修正 nv_vector_normalize_L2でベクトルの要素数が4の倍数になっていないとき にバグっていた

--- a/vcproj/nv.vcproj
+++ b/vcproj/nv.vcproj
@@ -492,7 +492,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\src\nv_ip_keypoint.c"
+					RelativePath="..\src\nv_ip_keypoint.cpp"
 					>
 				</File>
 				<File
