--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,13 +6,12 @@ nv_config_msvc.h \
 3rd_party/msinttypes/stdint.h \
 3rd_party/sha1/sha.h \
 3rd_party/mt/mt64.h \
-3rd_party/avxintrin_emu/avxintrin_emu.h \
 nv.pc.in \
 libnv-2.def
 
 lib_LTLIBRARIES = libnv.la
 libnv_la_LIBADD = 
-libnv_la_CFLAGS = -I$(srcdir)/3rd_party/sha1 -I$(srcdir)/3rd_party/mt -I$(srcdir)/3rd_party/avxintrin_emu
+libnv_la_CFLAGS = -I$(srcdir)/3rd_party/sha1 -I$(srcdir)/3rd_party/mt
 
 libnv_la_CXXFLAGS = $(libnv_la_CFLAGS)
 libnv_la_LDFLAGS = -no-undefined -version-number @NV_MAJOR@:@NV_MINOR@:@NV_REVISION@ -rpath "$(libdir)"
@@ -26,7 +25,6 @@ nv_core_matrix.c \
 nv_core_rand.c \
 nv_util_map.cpp \
 nv_util_sha1.c \
-nv_util_sleep.c \
 nv_util_clock.c \
 nv_util_2d_index.cpp \
 nv_util_array.cpp \
@@ -104,7 +102,6 @@ nv_util.h \
 nv_util_map.h \
 nv_util_clock.h \
 nv_util_sha1.h \
-nv_util_sleep.h \
 nv_util_getopt.h \
 nv_util_2d_index.h \
 nv_util_array.h \
